src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Account</fullName>
                    <default>true</default>
                    <label>Bank Account</label>
                </value>
                <value>
                    <fullName>Trust Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Name_Arabic__c</fullName>
        <label>Approved Name Arabic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Name__c</fullName>
        <label>Approved Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_RC__c</fullName>
        <label>Assigned To RC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Branch__c</fullName>
        <label>Bank Branch</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_For_Review_Reason__c</fullName>
        <label>Call For Review Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_De_Registration_Required__c</fullName>
        <label>DDA De-Registration Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDA_Request_Id__c</fullName>
        <externalId>true</externalId>
        <label>DDA Request Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Request_Number__c</fullName>
        <externalId>true</externalId>
        <label>DDA Request Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Reason__c</fullName>
        <description>Field used to store rejection reason from DDA.</description>
        <label>Feedback Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <label>Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsMovedToNextStep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Moved To Next Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Data_Migrated_and_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Data Migrated and Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Handover_Date__c</fullName>
        <label>Key Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Framework__c</fullName>
        <formula>TEXT(Account.Legal_Framework__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Framework</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_In_Charge_Email__c</fullName>
        <label>Manager In Charge Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Required_Share_Capital__c</fullName>
        <label>Minimum Required Share Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Of_Trust_account_Payments__c</fullName>
        <label>No. Of Trust account Payments</label>
        <summaryForeignKey>Trust_Account_Payment__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Proposed_Name_of_Business_1st_choice__c</fullName>
        <label>Proposed Name of Business (1st choice)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Name_of_Business_2nd_choice__c</fullName>
        <label>Proposed Name of Business (2nd choice)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Name_of_Business_3rd_choice__c</fullName>
        <label>Proposed Name of Business (3rd choice)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Lease_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Lease Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Captured from the lease termination case and passed to the Finance and Brand Sales work order.</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Reasons__c</fullName>
        <description>Field captured at the lease termination case for the Finance work order</description>
        <label>Termination Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Due__c</fullName>
        <label>Total Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trust_Account_Payments_Received__c</fullName>
        <label>Trust Account Payments Received</label>
        <summarizedField>Trust_Account_Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>Trust_Account_Payment__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Under_Registration_BU_Sub_Category__c</fullName>
        <label>Under Registration BU Sub Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Number__c</fullName>
        <label>Work Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type__c</fullName>
        <label>Work Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sequencial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <columns>RecordType</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Brand_Sales_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Brand Sales</label>
        <queue>Brand_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>D_TS_Fit_Out_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>D&amp;TS - Fit-Out</label>
        <queue>D_TS_Fit_Out</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FM_Operations_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>FM Operations</label>
        <queue>FM_Operations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance</label>
        <queue>Finance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Sales_PRM_Coordinate_Handover_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Sales/PRM - Coordinate Handover</label>
        <queue>Sales_PRM_Coordinate_Handover</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Security_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Security</label>
        <queue>Security</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Brand_Approval</fullName>
        <active>true</active>
        <label>Brand Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Brand_Sales</fullName>
        <active>true</active>
        <description>Record Type used for Brand Sales when a lease termination case has been created.</description>
        <label>Brand Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>DDA_License</fullName>
        <active>false</active>
        <label>DDA License</label>
    </recordTypes>
    <recordTypes>
        <fullName>DDA_Name_Reservation</fullName>
        <active>true</active>
        <label>DDA Name Reservation</label>
    </recordTypes>
    <recordTypes>
        <fullName>D_TS_Fit_Out</fullName>
        <active>true</active>
        <label>D&amp;TS - Fit-Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>FM_Operations</fullName>
        <active>true</active>
        <label>FM Operations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finance</fullName>
        <active>true</active>
        <description>Record Type used for the Finance team when a Lease Termination Case is requested.</description>
        <label>Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>HSE</fullName>
        <active>true</active>
        <label>HSE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Handover_Inspection</fullName>
        <active>true</active>
        <description>Created against the Termination Case.</description>
        <label>Handover Inspection</label>
    </recordTypes>
    <recordTypes>
        <fullName>License_Registration_Request</fullName>
        <active>true</active>
        <label>License Registration Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reinstatement</fullName>
        <active>true</active>
        <description>Created against the Termination Case.</description>
        <label>Reinstatement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_PRM_Coordinate_Handover</fullName>
        <active>true</active>
        <label>Sales/PRM - Coordinate Handover,</label>
    </recordTypes>
    <recordTypes>
        <fullName>Security_Clearance</fullName>
        <active>true</active>
        <label>Security Clearance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Security_Inspection</fullName>
        <active>true</active>
        <description>Used for the Termination Case created.</description>
        <label>Security Inspection</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Key_Handover_date_required</fullName>
        <active>true</active>
        <description>The Key Handover date is required for the Security Inspection Record Work Order</description>
        <errorConditionFormula>AND( RecordType.Name = &quot;Security Inspection&quot;,
ISPICKVAL(Status, &quot;Approved&quot;),
 ISBLANK( Key_Handover_Date__c ) 
)</errorConditionFormula>
        <errorDisplayField>Key_Handover_Date__c</errorDisplayField>
        <errorMessage>Please enter a Key Handover Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Rejected</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND( ISPICKVAL( Status , &apos;Rejected&apos;), ISBLANK( Description), ISBLANK( Feedback_Reason__c )), true, false)</errorConditionFormula>
        <errorMessage>If you select Status value Rejected you most enter either Feedback Reason or Description</errorMessage>
    </validationRules>
</CustomObject>